--- a/MatrixCalculator/requirements.txt
+++ b/MatrixCalculator/requirements.txt
@@ -1,5 +1,5 @@
-flask==2.0.3
-numpy==1.21.6
-gunicorn==20.1.0
-setuptools==59.6.0
-wheel==0.37.1
+flask==2.1.3
+numpy==1.26.4  # Python 3.13 ile uyumlu son sürüm
+gunicorn==21.2.0
+setuptools==68.2.2
+wheel==0.42.0
