--- a/MatrixCalculator/requirements.txt
+++ b/MatrixCalculator/requirements.txt
@@ -3,3 +3,4 @@ numpy==1.26.4  # Python 3.13 ile uyumlu son sürüm
 gunicorn==21.2.0
 setuptools==68.2.2
 wheel==0.42.0
+werkzeug==2.3.7  # Flask 2.1.3 ile uyumlu sürüm
